# sighan

./: CMakeLists.txt  LICENSE  README.md  build_and_test.sh
include/sighan/: sighan.hpp
src/: sighan.cpp
tests/: CMakeLists.txt  test_simple.cpp
